--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -79,13 +79,14 @@ $print-transparent-backgrounds: true;
 // --------------
 
 $breakpoints: (
-  small: 0,
-  medium: 640px,
-  large: 1024px,
-  xlarge: 1200px,
-  xxlarge: 1440px,
+  xsmall: 0,
+  small: 320px,
+  medium: 480px,
+  large: 780px,
+  xlarge: 1024px,
+  xxlarge: 1280px,
 );
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (xsmall small medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
@@ -93,8 +94,8 @@ $breakpoint-classes: (small medium large);
 $grid-row-width: $global-width;
 $grid-column-count: 12;
 $grid-column-gutter: (
-  small: 20px,
-  medium: 30px,
+  xsmall: 10px,
+  medium: 20px,
 );
 $grid-column-align-edge: true;
 $block-grid-max: 8;
@@ -107,7 +108,7 @@ $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-sizes: (
-  small: (
+  xsmall: (
     'h1': 24,
     'h2': 20,
     'h3': 19,
